<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.google.sample.cloudvision.activities.TrashDetailActivity">


    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />

        <LinearLayout
            android:id="@+id/typeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/details"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/typeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/trashType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/typeOfWasteLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/typeLinearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/typeOfWasteLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/typeOfWaste"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/trashTypeOfWaste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="0.92"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/storeNameLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/typeOfWasteLinearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/storeNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storeName"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/trashStoreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/idLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/storeNameLinearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/trashId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/volumeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/idLinearLayout"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/volumeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/trashVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/emptyTheBin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:onClick="openEmptyTheBinActivity"
            android:text="@string/emptyTheBin"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="102dp" />

        <Button
            android:id="@+id/backToMenu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/emptyTheBin"
            android:layout_marginBottom="35dp"
            android:onClick="onBackToMenuButton1Clicked"
            android:text="Back to Menu" />

        <LinearLayout
            android:id="@+id/volumePercentLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/volumeLinearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/trashVolumePercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.16"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/volumePercentProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:max="100"
                android:visibility="visible" />

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
