<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="58dp"
            android:layout_marginTop="55dp">

            <RadioButton
                android:id="@+id/store1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"
                android:text="@string/negozio1" />

            <RadioButton
                android:id="@+id/store2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"
                android:text="@string/negozio2" />

            <RadioButton
                android:id="@+id/store3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"
                android:text="@string/negozio3" />

        </RadioGroup>

        <TextView
            android:id="@+id/networkLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/radioGroup"
            android:layout_marginTop="22dp"
            android:layout_weight="1"
            android:text="Insert Network" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/networkLabel"
            android:orientation="horizontal"
            android:id="@+id/linearLayout">

            <EditText
                android:id="@+id/networkText"
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/networkLabel"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="192.168.0.1:8080" />

            <Button
                android:id="@+id/confirmNetworkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onConfirmNetworkButtonClicked"
                android:text="confirm" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/percentageTextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editText"
                android:layout_centerHorizontal="true"
                android:layout_weight="0.04"
                android:text="Select Percentage for notification" />

            <EditText
                android:id="@+id/percentageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.04"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="80" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>